fix: Remove extra margin for header and footer

--- a/shared.css
+++ b/shared.css
@@ -14,7 +14,7 @@ body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
   display: grid;
-  grid-template-rows: 3.5rem auto 8rem;
+  grid-template-rows: 3.5rem auto fit-content(8rem);
   grid-template-areas:
     "header"
     "main"
@@ -24,8 +24,6 @@ body {
 }
 
 main {
-  /* min-height: calc(100vh - 3.5rem - 8rem);*/
-  margin-top: 3.5rem;
   grid-area: main;
 }
 
